correcting reporting configuration