@@ -248,10 +248,13 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>findbugs-maven-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>2.5.1</version>
           <configuration>
             <findbugsXmlOutput>true</findbugsXmlOutput>
             <failOnError>false</failOnError>
+            <excludeFilterFile>${parentdir}/reportConfig/findbugsExcludeFilter.xml</excludeFilterFile>
+            <includeFilterFile>${parentdir}/reportConfig/findbugsIncludeFilter.xml</includeFilterFile>
+            <jvmArgs>-Xmx1024M -XX:PermSize=128m -XX:MaxPermSize=256m</jvmArgs>
           </configuration>
           <executions>
             <execution>
@@ -264,13 +267,16 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>2.5</version>
+          <version>2.7.1</version>
           <configuration>
-            <sourceEncoding>UTF-8</sourceEncoding>
-            <minimumTokens>100</minimumTokens>
-            <targetJdk>1.6</targetJdk>
-            <format>xml</format>
+            <targetJdk>${compileSource}</targetJdk>
             <failOnViolation>false</failOnViolation>
+            <rulesets>
+              <!-- Rule sets that come bundled with PMD -->
+              <ruleset>/rulesets/maven.xml</ruleset>
+              <!-- Custom local file system rule set -->
+              <ruleset>${parentdir}/reportConfig/pmd-ruleset.xml</ruleset>
+            </rulesets>
           </configuration>
           <executions>
             <execution>
